src/variables.scss
// Basics
$rfgen-black: rgba(0, 0, 0, 1);
$rfgen-white: rgba(255, 255, 255, 1);
$rfgen-grey: rgba(225, 225, 225, 1);
$rfgen-dark-grey: rgba(150, 150, 150, 1);

// Highlight
$rfgen-blue: rgba(0, 195, 255, 1);
$rfgen-red: rgb(255, 70, 55);
$rfgen-green: rgba(55, 240, 50, 1);

// Base
$rfgen-khaki: rgba(164, 166, 151, 1);
$rfgen-military: rgba(84, 91, 77, 1);
$rfgen-leaf: rgba(97, 108, 102, 1);
$rfgen-brown: rgba(71, 63, 59, 1);
$rfgen-beige: rgba(230, 237, 208, 1);

// Colormap
$colors: (
  'rfgen-red': $rfgen-red,
  'rfgen-blue': $rfgen-blue,
  'rfgen-green': $rfgen-green,
  'rfgen-khaki': $rfgen-khaki,
  'rfgen-military': $rfgen-military,
  'rfgen-leaf': $rfgen-leaf,
  'rfgen-brown': $rfgen-brown,
  'rfgen-beige': $rfgen-beige,
  'rfgen-black': $rfgen-black,
  'rfgen-white': $rfgen-white,
  'rfgen-grey': $rfgen-grey
);

// Typography
$font-stack: 'HelveticaNeue', 'Helvetica Neue', helvetica, 'arial', sans-serif;
$rfgen-font-size-small: 14px;
$rfgen-font-size-large: 26px;
$rfgen-font-size-mobile-large: 22px;

// Spacing
$navigation-top-height: 80px;
$navigation-bottom-height: 50px;
$rfgen-grid-unit: 5px;
$tile-height: 220px;
$tile-bar-height: 40px;
$mobile-tile-height: 280px;

// Animation
$easing: cubic-bezier(0.23, 1, 0.32, 1);

@mixin hide-scroll {
  &::-webkit-scrollbar {
    display: none;
  }
  -ms-overflow-style: none;
}

// Responsive
$breakpoints: (
  'small': (
    max-width: 700px
  ),
  'medium': (
    max-width: 1000px
  ),
  'large': (
    max-width: 1600px
  ),
  'short': (
    max-height: 700px
  )
);

// Color classes
@each $color, $var in $colors {
  .#{$color} {
    background: $var;

    // ! Changes the gradient overlay color for each color
    .category-menu-list-overlay {
      background: linear-gradient(to left, $var, transparent);

      &.arabic {
        background: linear-gradient(to right, $var, transparent);
      }
    }
  }
}

// Additional text color changes
.rfgen-black {
  color: $rfgen-white;
}

.rfgen-white {
  color: $rfgen-black;
}

.rfgen-grey {
  color: $rfgen-black;
}

// Locale
.text-arabic {
  direction: rtl;
  font-family: Arial, Helvetica, sans-serif;
}

/// Responsive manager.
/// @access public
/// @param {String} $breakpoint - Breakpoint
/// @requires $breakpoints
@mixin screen-size($breakpoint) {
  $raw-query: map-get($breakpoints, $breakpoint);
  @if $raw-query {
    $query: if(
      type-of($raw-query) == 'string',
      unquote($raw-query),
      inspect($raw-query)
    );
    @media #{$query} {
      @content;
    }
  } @else {
    @error 'No value found for `#{$breakpoint}`. ' + 'Please make sure it is defined in `$breakpoints` map.';
  }
}

